Changelog 1.0.0-1.21:

- Ported to a 1.21 version

Changelog 1.0.1-1.21:

- Added Redstone Shield with Particle System (lighting needed)
- Fixed Creative Mode Tab