@@ -5,4 +5,5 @@ Changelog 1.0.0-1.21:
 Changelog 1.0.1-1.21:
 
 - Added Redstone Shield with Particle System (lighting needed)
+- Added tooltip that shows if particles are enabled or disabled
 - Fixed Creative Mode Tab
